--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,3 @@
 @import url(../css/components/first-section-we-do.css);
+@import url(../css/components/second-section-we-best.css);
 @import url(../css/layout/fonts.css);
