--- a/SCSS/components/first-section-we-do.scss
+++ b/SCSS/components/first-section-we-do.scss
@@ -56,6 +56,15 @@ $colorRed:#e35028;
     font-weight: 500;
     line-height: 60px;
 }
+@mixin backgroundImage {
+    
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    min-height: 650px;
+    
+    width: 100%;
+}
 /*mixins close*/
 body {
     min-width: 960px;
@@ -65,14 +74,10 @@ body {
 }
 
 .we-do {
+    @include backgroundImage;
     background-color: #111114;
     background-image: url(../../img/bg1.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    min-height: 650px;
-    height: 100vh;
-    width: 100%;
+    
 }
 
 .header__nav--link {
@@ -213,3 +218,4 @@ body {
     margin-top: 130px;
 }
 /*Сетки close*/
+
