--- a/css/components/first-section-we-do.css
+++ b/css/components/first-section-we-do.css
@@ -13,14 +13,13 @@ body {
   display: block; }
 
 .we-do {
-  background-color: #111114;
-  background-image: url(../../img/bg1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   min-height: 650px;
-  height: 100vh;
-  width: 100%; }
+  width: 100%;
+  background-color: #111114;
+  background-image: url(../../img/bg1.jpg); }
 
 .header__nav--link {
   text-decoration: none;
