--- a/SCSS/components/second-section-we-best.scss
+++ b/SCSS/components/second-section-we-best.scss
@@ -1,19 +1,15 @@
-
+@import "first-section-we-do.scss";
 
 .we-best{
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    min-height: 650px;
-    width: 100%;
+    @include backgroundImage;
+    
     background-color: #f6f0ec;
     background-image: url(../../img/bg2.jpg);
 }
 .we-best__title {
-    font-family: Gagalin, Arial, sans-serif;
-    color: #303335;
+    @include fontOrangeGagalin;
+    color: $colorBlack;
     font-size: 72px;
-    font-weight: 400;
     line-height: 64px;
     display: flex;
     justify-content: center;
