--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,6 +1,7 @@
 
 @import url(../scss/components/first-section-we-do.scss);
 @import url(../scss/components/second-section-we-best.scss);
+@import url(../scss/components/third-section-reviews.scss);
 @import url(../scss/layout/fonts.scss);
 
 
