--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
 @import url(../css/components/first-section-we-do.css);
 @import url(../css/components/second-section-we-best.css);
-@import url(../css/layout/fonts.css);
+@import url(../css/components/third-section-reviews.css);
+@import url(../css/layout/fonts.scss);
