--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,7 +1,10 @@
 
+@import url(../scss/layout/mixinsandvars.scss);
+
 @import url(../scss/components/first-section-we-do.scss);
 @import url(../scss/components/second-section-we-best.scss);
 @import url(../scss/components/third-section-reviews.scss);
+
 @import url(../scss/layout/fonts.scss);
 
 
