--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -1,1 +1,81 @@
 @import "first-section-we-do.scss";
+@mixin bgImageReview {
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 25%;
+    height: 50%;
+    z-index: 7;
+}
+
+.reviews {
+    min-height: 650px;
+    width: 100%;
+}
+
+.reviews__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+}
+
+.reviews__hover {
+    visibility: hidden;
+    position: absolute;
+    height: 100%;
+    z-index: 10;
+    top: 0%;
+    left: 0%;
+    background-color: rgba(20, 20, 20, 0.7);
+    padding-top: 10%;
+    padding-left: 7%;
+}
+
+.reviews__item:hover .reviews__hover {
+    visibility: visible;
+}
+
+.reviews__hover--title {
+    @include fontOrangeGagalin;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 28px;
+    color: $colorWhite;
+}
+
+.reviews__hover--text {
+    @include fontUbuntu;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    width: 86%;
+}
+
+.reviews__hover--btn {
+    @include btn;
+    @include fontUbuntu;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 30px;
+    background-color: $colorBlack;
+    padding-bottom: 1%;
+    padding-left: 5%;
+    padding-right: 4%;
+    &:hover {
+        background-color: #1f2122;
+    }
+}
+
+.reviews__item {
+    @include bgImageReview;
+    margin-bottom: -0.3%;
+    position: relative;
+}
+
+.reviews__img {
+    width: 100%;
+    height: 100%;
+}
