--- a/css/components/second-section-we-best.css
+++ b/css/components/second-section-we-best.css
@@ -176,7 +176,8 @@ body {
 .breadcrumbs {
   position: fixed;
   top: 14%;
-  right: 15.5%; }
+  right: 15.5%;
+  z-index: 50; }
 
 .we-do__next-step {
   display: -webkit-box;
@@ -195,7 +196,8 @@ body {
   min-height: 650px;
   width: 100%;
   background-color: #f6f0ec;
-  background-image: url(../../img/bg2.jpg); }
+  background-image: url(../../img/bg2.jpg);
+  margin-bottom: -1.65%; }
 
 .we-best__title {
   font-family: Gagalin, Arial, sans-serif;
