--- a/css/components/third-section-reviews.css
+++ b/css/components/third-section-reviews.css
@@ -176,7 +176,8 @@ body {
 .breadcrumbs {
   position: fixed;
   top: 14%;
-  right: 15.5%; }
+  right: 15.5%;
+  z-index: 50; }
 
 .we-do__next-step {
   display: -webkit-box;
@@ -188,3 +189,97 @@ body {
   margin-top: 14%; }
 
 /*Сетки close*/
+.reviews {
+  min-height: 650px;
+  width: 100%; }
+
+.reviews__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%; }
+
+.reviews__hover {
+  visibility: hidden;
+  position: absolute;
+  height: 100%;
+  z-index: 10;
+  top: 0%;
+  left: 0%;
+  background-color: rgba(20, 20, 20, 0.7);
+  padding-top: 10%;
+  padding-left: 7%; }
+
+.reviews__item:hover .reviews__hover {
+  visibility: visible; }
+
+.reviews__hover--title {
+  font-family: Gagalin, Arial, sans-serif;
+  color: #f9b43b;
+  font-size: 72px;
+  font-weight: 400;
+  line-height: 85px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 28px;
+  color: white; }
+
+.reviews__hover--text {
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 30px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  width: 86%; }
+
+.reviews__hover--btn {
+  background-color: #e35028;
+  border: none;
+  border-radius: 2px;
+  color: white;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding-top: 1%;
+  padding-bottom: 4%;
+  padding-left: 19%;
+  padding-right: 14%;
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 30px;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 30px;
+  background-color: #2f3234;
+  padding-bottom: 1%;
+  padding-left: 5%;
+  padding-right: 4%; }
+  .reviews__hover--btn:hover {
+    background-color: #c1401e; }
+  .reviews__hover--btn:hover {
+    background-color: #1f2122; }
+
+.reviews__item {
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 25%;
+  height: 50%;
+  z-index: 7;
+  margin-bottom: -0.3%;
+  position: relative; }
+
+.reviews__img {
+  width: 100%;
+  height: 100%; }
