--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -21,6 +21,7 @@
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
+    background-color: $colorBlack;
 }
 
 .reviews__hover {
@@ -31,12 +32,9 @@
     top: 0%;
     left: 0%;
     background-color: rgba(20, 20, 20, 0.7);
+    opacity: 0;
     padding-top: 10%;
     padding-left: 7%;
-}
-
-.reviews__item:hover .reviews__hover {
-    visibility: visible;
 }
 
 .reviews__hover--title {
@@ -74,6 +72,13 @@
     @include bgImageReview;
     margin-bottom: -0.3%;
     position: relative;
+
+    &:hover {
+        .reviews__hover {
+            visibility: visible;
+            opacity: 1;
+        }
+    }
 }
 
 .reviews__img {
