--- a/css/components/third-section-reviews.css
+++ b/css/components/third-section-reviews.css
@@ -4,13 +4,20 @@
 body {
   min-width: 960px; }
 
+.wrapper {
+  position: relative;
+  width: 100%;
+  min-height: 100%;
+  overflow: hidden; }
+
 .container {
   margin: 0;
   padding: 0;
   width: 940px;
   margin: 0 auto;
   padding: 0 10px;
-  display: block; }
+  display: block;
+  position: relative; }
 
 .we-do {
   background-size: cover;
@@ -207,7 +214,8 @@ body {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  background-color: #2f3234; }
 
 .reviews__hover {
   visibility: hidden;
@@ -217,11 +225,9 @@ body {
   top: 0%;
   left: 0%;
   background-color: rgba(20, 20, 20, 0.7);
+  opacity: 0;
   padding-top: 10%;
   padding-left: 7%; }
-
-.reviews__item:hover .reviews__hover {
-  visibility: visible; }
 
 .reviews__hover--title {
   font-family: Gagalin, Arial, sans-serif;
@@ -283,6 +289,9 @@ body {
   z-index: 7;
   margin-bottom: -0.3%;
   position: relative; }
+  .reviews__item:hover .reviews__hover {
+    visibility: visible;
+    opacity: 1; }
 
 .reviews__img {
   width: 100%;
