--- a/css/components/third-section-reviews.css
+++ b/css/components/third-section-reviews.css
@@ -295,4 +295,6 @@ body {
 
 .reviews__img {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%); }
