--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,11 +1,11 @@
 
-@import url(../scss/layout/mixinsandvars.scss);
+@import "layout/mixinsandvars.scss";
 
-@import url(../scss/components/first-section-we-do.scss);
-@import url(../scss/components/second-section-we-best.scss);
-@import url(../scss/components/third-section-reviews.scss);
+@import "components/first-section-we-do.scss";
+@import "components/second-section-we-best.scss";
+@import "components/third-section-reviews.scss";
 
-@import url(../scss/layout/fonts.scss);
+@import "layout/fonts.scss";
 
 
 
