--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,426 @@
-@import url(../css/layout/mixinsandvars.css);
-@import url(../css/components/first-section-we-do.css);
-@import url(../css/components/second-section-we-best.css);
-@import url(../css/components/third-section-reviews.css);
-@import url(../css/layout/fonts.css);
+@charset "UTF-8";
+/*mixins*/
+/*mixins close*/
+body {
+  min-width: 960px; }
+
+.wrapper {
+  position: relative;
+  width: 100%;
+  min-height: 100%;
+  overflow: hidden; }
+
+.container {
+  margin: 0;
+  padding: 0;
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+  display: block;
+  position: relative; }
+
+.we-do {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 650px;
+  width: 100%;
+  background-color: #111114;
+  background-image: url(../img/bg1.jpg);
+  margin-bottom: -48px; }
+
+.header__nav--link {
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 30px;
+  text-transform: uppercase; }
+  .header__nav--link:hover {
+    text-decoration: underline; }
+
+.header__nav--btn {
+  background-color: #e35028;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding-top: 1%;
+  padding-bottom: 4%;
+  padding-left: 19%;
+  padding-right: 16%;
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 30px;
+  text-transform: uppercase; }
+  .header__nav--btn:hover {
+    background-color: #c1401e; }
+
+.we-do__text--first {
+  font-family: Gagalin, Arial, sans-serif;
+  color: #f9b43b;
+  font-size: 72px;
+  font-weight: 400;
+  line-height: 85px; }
+
+.we-do__text--second {
+  font-family: Lifehack, Arial, sans-serif;
+  color: white;
+  font-size: 65px;
+  font-weight: 500;
+  line-height: 60px; }
+
+.header__nav--list {
+  list-style: none; }
+
+/*Декорирование breadcrumbs*/
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px; }
+
+.breadcrumbs__label {
+  cursor: pointer;
+  position: relative; }
+
+.breadcrumbs__label input[type="radio"] + .breadcrumbs__indicator {
+  position: absolute;
+  top: 4px;
+  left: 3px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: white; }
+
+.breadcrumbs__label input[type="radio"]:checked + .breadcrumbs__indicator::before {
+  content: "";
+  position: absolute;
+  top: -6px;
+  left: -6px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 1px solid white; }
+
+.breadcrumbs__label input[type="radio"]:hover + .breadcrumbs__indicator::before {
+  content: "";
+  position: absolute;
+  top: -6px;
+  left: -6px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 1px solid white; }
+
+.breadcrumbs__item {
+  margin-bottom: 3px;
+  color: transparent; }
+
+/*Декорирование Breadcrumbs close*/
+.we-do__next-step--link {
+  display: block;
+  background-image: url(../img/icons/arrow-scroll.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 30px;
+  height: 16px; }
+
+/*Сетки*/
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: -5%; }
+
+.header__nav--list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.header__nav {
+  margin-left: 3.1%;
+  padding-top: 2%; }
+
+.header__nav--item {
+  position: relative;
+  margin-right: 38px; }
+  .header__nav--item:last-child {
+    margin-right: 0; }
+  .header__nav--item::before {
+    content: "";
+    position: absolute;
+    background-color: white;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    top: 13px;
+    left: -19px; }
+  .header__nav--item:first-child::before {
+    display: none; }
+
+.header__nav--btn-wrap {
+  margin-left: 22px;
+  padding-top: 34px; }
+
+.we-do__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.we-do__img {
+  margin-left: 4%; }
+
+.we-do__text {
+  margin-left: 3%;
+  padding-top: 11%; }
+
+.we-do__text--first {
+  margin-bottom: 5%;
+  display: block; }
+
+.breadcrumbs {
+  position: fixed;
+  top: 14%;
+  right: 15.5%;
+  z-index: 50; }
+
+.we-do__next-step {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-top: 8%; }
+
+/*Сетки close*/
+.we-best {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 650px;
+  width: 100%;
+  background-color: #f6f0ec;
+  background-image: url(../img/bg2.jpg);
+  margin-bottom: -1.65%; }
+
+.we-best__title {
+  font-family: Gagalin, Arial, sans-serif;
+  color: #f9b43b;
+  font-size: 72px;
+  font-weight: 400;
+  line-height: 85px;
+  color: #2f3234;
+  font-size: 72px;
+  line-height: 64px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding-top: 13%;
+  margin-bottom: 6%; }
+
+.advantages {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 0;
+  padding-left: 0;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.advantages__item {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.advantages__title {
+  font-family: Lifehack, Arial, sans-serif;
+  color: white;
+  font-size: 65px;
+  font-weight: 500;
+  line-height: 60px;
+  font-size: 24px;
+  line-height: 28px;
+  color: #2f3234;
+  text-align: center;
+  margin-bottom: 0; }
+
+.advantages__text {
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 30px;
+  font-size: 14px;
+  line-height: 24px;
+  color: #2f3234;
+  text-align: center; }
+
+.advantages__img {
+  margin-bottom: 2%;
+  background-repeat: no-repeat;
+  background-position: center center; }
+  .advantages__img--meat {
+    /* background-image: url(../../img/icons/meat.svg);*/
+    width: 100px;
+    height: 90px; }
+  .advantages__img--hand {
+    /*background-image: url(../../img/icons/hand.svg);*/
+    width: 70px;
+    height: 85px; }
+  .advantages__img--sheet {
+    /*background-image: url(../../img/icons/natural.svg);*/
+    width: 87px;
+    height: 76px; }
+
+.reviews {
+  min-height: 650px;
+  width: 100%; }
+
+.reviews__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+  background-color: #2f3234; }
+
+.reviews__hover {
+  visibility: hidden;
+  position: absolute;
+  height: 100%;
+  z-index: 10;
+  top: 0%;
+  left: 0%;
+  background-color: rgba(20, 20, 20, 0.7);
+  opacity: 0;
+  padding-top: 10%;
+  padding-left: 7%; }
+
+.reviews__hover--title {
+  font-family: Gagalin, Arial, sans-serif;
+  color: #f9b43b;
+  font-size: 72px;
+  font-weight: 400;
+  line-height: 85px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 28px;
+  color: white; }
+
+.reviews__hover--text {
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 30px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  width: 86%; }
+
+.reviews__hover--btn {
+  background-color: #e35028;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding-top: 1%;
+  padding-bottom: 4%;
+  padding-left: 19%;
+  padding-right: 16%;
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 30px;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 30px;
+  background-color: #2f3234;
+  padding-bottom: 1%;
+  padding-left: 5%;
+  padding-right: 4%; }
+  .reviews__hover--btn:hover {
+    background-color: #c1401e; }
+  .reviews__hover--btn:hover {
+    background-color: #1f2122; }
+
+.reviews__item {
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 25%;
+  height: 50%;
+  z-index: 7;
+  margin-bottom: -0.3%;
+  position: relative; }
+  .reviews__item:hover .reviews__hover {
+    visibility: visible;
+    opacity: 1; }
+
+.reviews__img {
+  width: 100%;
+  height: 100%;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%); }
+
+@font-face {
+  font-family: "Lifehack";
+  src: url(../../fonts/Lifehack-Medium.woff2) format("woff2");
+  font-weight: 500; }
+
+@font-face {
+  font-family: "Gagalin";
+  src: url(../../fonts/Gagalin/Gagalin-Regular.woff2) format("woff2");
+  font-weight: 400; }
+
+@font-face {
+  font-family: "Ubuntu";
+  src: url(../../fonts/Ubuntu/Ubuntu-Light.woff2) format("woff2");
+  font-weight: 300; }
+
+@font-face {
+  font-family: "Ubuntu";
+  src: url(../../fonts/Ubuntu/Ubuntu-Regular.woff2) format("woff2");
+  font-weight: 400; }
+
+@font-face {
+  font-family: "Ubuntu";
+  src: url(../../fonts/Ubuntu/Ubuntu-Medium.woff2) format("woff2");
+  font-weight: 500; }
+
+@font-face {
+  font-family: "Ubuntu";
+  src: url(../../fonts/Ubuntu/Ubuntu-B.woff2) format("woff2");
+  font-weight: 700; }
