--- a/SCSS/components/second-section-we-best.scss
+++ b/SCSS/components/second-section-we-best.scss
@@ -1,10 +1,10 @@
-@import "../components/first-section-we-do.scss";
+
 
 .we-best{
     @include backgroundImage;
     
     background-color: #f6f0ec;
-    background-image: url(../../img/bg2.jpg);
+    background-image: url(../img/bg2.jpg);
     margin-bottom: -1.65%;
 }
 .we-best__title {
