--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -64,11 +64,12 @@
     @include bgImageReview;
     margin-bottom: -0.3%;
     position: relative;
-
+    overflow: hidden;
     &:hover {
         .reviews__hover {
             visibility: visible;
             opacity: 1;
+           
         }
     }
 }
