--- a/SCSS/layout/fonts.scss
+++ b/SCSS/layout/fonts.scss
@@ -1,23 +1,23 @@
 @font-face {
     font-family: "Lifehack";
-    src: url(../../fonts/Lifehack-Medium.woff2) format('woff2');
+    src: url(../fonts/Lifehack-Medium.woff2) format('woff2');
     font-weight: 500;
 }
 @font-face {
     font-family: "Gagalin";
-    src: url(../../fonts/Gagalin/Gagalin-Regular.woff2) format('woff2');
+    src: url(../fonts/Gagalin/Gagalin-Regular.woff2) format('woff2');
     font-weight: 400;
 }
 
 @font-face {
     font-family: "Ubuntu";
-    src: url(../../fonts/Ubuntu/Ubuntu-Light.woff2) format('woff2');
+    src: url(../fonts/Ubuntu/Ubuntu-Light.woff2) format('woff2');
     font-weight: 300;
 }
 
 @font-face {
     font-family: "Ubuntu";
-    src: url(../../fonts/Ubuntu/Ubuntu-Regular.woff2) format('woff2');
+    src: url(../fonts/Ubuntu/Ubuntu-Regular.woff2) format('woff2');
     font-weight: 400;
 }
 @font-face {
