--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,8 @@ body {
   height: 50%;
   z-index: 7;
   margin-bottom: -0.3%;
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
   .reviews__item:hover .reviews__hover {
     visibility: visible;
     opacity: 1; }
@@ -397,22 +398,22 @@ body {
 
 @font-face {
   font-family: "Lifehack";
-  src: url(../../fonts/Lifehack-Medium.woff2) format("woff2");
+  src: url(../fonts/Lifehack-Medium.woff2) format("woff2");
   font-weight: 500; }
 
 @font-face {
   font-family: "Gagalin";
-  src: url(../../fonts/Gagalin/Gagalin-Regular.woff2) format("woff2");
+  src: url(../fonts/Gagalin/Gagalin-Regular.woff2) format("woff2");
   font-weight: 400; }
 
 @font-face {
   font-family: "Ubuntu";
-  src: url(../../fonts/Ubuntu/Ubuntu-Light.woff2) format("woff2");
+  src: url(../fonts/Ubuntu/Ubuntu-Light.woff2) format("woff2");
   font-weight: 300; }
 
 @font-face {
   font-family: "Ubuntu";
-  src: url(../../fonts/Ubuntu/Ubuntu-Regular.woff2) format("woff2");
+  src: url(../fonts/Ubuntu/Ubuntu-Regular.woff2) format("woff2");
   font-weight: 400; }
 
 @font-face {
